@@ -20,7 +20,6 @@ except AttributeError:
     base_path = os.path.abspath(".")
     pyinstaller = False
 
-
 from qtpy import QtCore, QtGui, QtWidgets
 
 QtWidgets.QApplication.setAttribute(QtCore.Qt.AA_EnableHighDpiScaling, True)
@@ -123,6 +122,35 @@ def latest_fastflix(no_new_dialog=False):
 
 def file_date():
     return datetime.now().isoformat().replace(":", ".").rsplit(".", 1)[0]
+
+
+CONTINUOUS = 0x80000000
+SYSTEM_REQUIRED = 0x00000001
+
+
+def prevent_sleep_mode():
+    """https://msdn.microsoft.com/en-us/library/windows/desktop/aa373208(v=vs.85).aspx"""
+    if reusables.win_based:
+        import ctypes
+
+        try:
+            ctypes.windll.kernel32.SetThreadExecutionState(CONTINUOUS | SYSTEM_REQUIRED)
+        except Exception:
+            logger.exception("Could not prevent system from possibly going to sleep during conversion")
+        else:
+            logger.debug("System has been asked to not sleep")
+
+
+def allow_sleep_mode():
+    if reusables.win_based:
+        import ctypes
+
+        try:
+            ctypes.windll.kernel32.SetThreadExecutionState(CONTINUOUS)
+        except Exception:
+            logger.exception("Could not allow system to resume sleep mode")
+        else:
+            logger.debug("System has been allowed to enter sleep mode again")
 
 
 class FastFlixError(Exception):
